# wireguard-gui-client

./: .gitignore  LICENSE.md  README.md  alerts.py  build.sh  build_appimage.sh  index.html  pyproject.toml  requirements.txt  settings.py
src/: main.py  settings.py
